--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ body {
 /* Landingpage */
 
 #main {
-  background-image: url("assets/background.jpg");
+  background-image: url("../assets/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
