grid and some other changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,37 @@
   --PakeSilver: #CCC5B9;
   --FloralWhite: #FFFCF2;
 }
+/* Grid */
+.wrapper{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  grid-template-rows: max-content;
+}
 
+.col-1{
+  grid-column: span 1;
+}
+
+.col-2{
+  grid-column: span 2;
+}
+
+.col-3{
+  grid-column: span 3;
+}
+
+.col-4{
+  grid-column: span 4;
+}
+
+.col-5{
+  grid-column: span 5;
+}
+
+.col-6{
+  grid-column: span 6;
+}
 /*General selectors*/
 *{
   margin: 0;
