--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,13 @@
   --FloralWhite: #FFFCF2;
 }
 /* Grid */
-.wrapper{
+.row{
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 10px;
   grid-template-rows: max-content;
+  position: relative;
+  width: 100%;
 }
 
 .col-1{
@@ -36,6 +38,22 @@
 .col-6{
   grid-column: span 6;
 }
+
+.flex-col{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.flex-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
 /*General selectors*/
 *{
   margin: 0;
@@ -54,6 +72,7 @@
  h1, h2 ,h3, h4, h5, h6, button, label {
    font-family: 'Roboto' , sans-serif;
    text-align: center;
+   z-index: 10;
  }
 
  a:hover,button:hover {
@@ -94,6 +113,13 @@ body {
 
 .sticktop {
   position: sticky;
+}
+
+.pages {
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  gap: 20px;
 }
 
 /* Header */
@@ -171,7 +197,7 @@ body {
 
 /* bio */
 #bio {
-  background-color: var(--ErieBlack) ;
+  background-color: var(--FloralWhite) ;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -180,7 +206,7 @@ body {
 
 /* live */
 #live-story {
-  background-color: var(--BlackOlive);
+  background-color: var(--ErieBlack);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -198,7 +224,7 @@ body {
 
 /*footer*/
 #footer {
-  background-color: var(--ErieBlack);
+  background-color: var(--BlackOlive);
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -207,16 +233,36 @@ body {
 /*Media queries*/
 
 @media screen and (max-width: 675px){
+  .col-1{
+    grid-column: span 6;
+  }
+  
+  .col-2{
+    grid-column: span 6;
+  }
+  
+  .col-3{
+    grid-column: span 6;
+  }
+  
+  .col-4{
+    grid-column: span 6;
+  }
+  
+  .col-5{
+    grid-column: span 6;
+  }
+  
+  .col-6{
+    grid-column: span 6;
+  }
+
+  .spacer{
+    display: none;
+  }
+
   h1{
     font-size: 6em;
-  }
-
-  h2{
-    font-size: 2em;
-  }
-
-  h3{
-    font-size: 1em;
   }
 
   .navbar{
