--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,10 @@
    text-align: center;
    z-index: 10;
  }
+ a {
+   color: var(--PakeSilver);
+   text-decoration: none;
+ }
 
  a:hover,button:hover {
    transition: all 0.1s ease-in-out;
@@ -213,13 +217,14 @@ body {
   background-size: cover;
 }
 
-/* achievements */
-#achievements {
-  background-color: var(--PakeSilver);
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  background-size: cover;
+#live-story p {
+  font-size: 2em;
+}
+
+.p-life-story {
+  font-size: 2em;
+  padding: 0.5em;
+  word-break: break-word;
 }
 
 /*footer*/
@@ -229,6 +234,34 @@ body {
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+  justify-content: flex-start;
+}
+
+.legal-footer{
+  padding: 10px;
+  margin-top: auto;
+  height: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--ErieBlack);
+}
+
+.legal-footer > img {
+  height: 64px;
+}
+
+#legal{
+  background-color: var(--PakeSilver);
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  justify-content: flex-start;
 }
 /*Media queries*/
 
