--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,7 @@ body {
 }
 
 .legal-footer{
+  width: 100%;
   padding: 10px;
   margin-top: auto;
   height: 5%;
@@ -252,6 +253,10 @@ body {
 
 .legal-footer > img {
   height: 64px;
+}
+
+.legal-footer > p {
+  font-size:2em;
 }
 
 #legal{
